src/types/tests/snapshots/tgbot__types__tests__update__chat_boost_updated.snap
---
source: src/types/tests/update.rs
expression: expected_struct
---
{
  "update_id": 1,
  "chat_boost": {
    "boost": {
      "add_date": 0,
      "boost_id": "id",
      "expiration_date": 0,
      "source": {
        "source": "gift_code",
        "user": {
          "first_name": "test",
          "id": 1,
          "is_bot": false
        }
      }
    },
    "chat": {
      "type": "channel",
      "id": 1,
      "title": "test"
    }
  }
}
