src/types/tests/snapshots/tgbot__types__tests__update__chat_join_request.snap
---
source: src/types/tests/update.rs
expression: expected_struct
---
{
  "update_id": 1,
  "chat_join_request": {
    "chat": {
      "type": "group",
      "id": 1,
      "title": "Group"
    },
    "date": 0,
    "from": {
      "first_name": "John",
      "id": 1,
      "is_bot": false
    }
  }
}
